--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2658,6 +2658,123 @@ input, select, textarea {
 
 			}
 
+
+/* post */
+
+.posts {
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-moz-align-items: -moz-stretch;
+	-webkit-align-items: -webkit-stretch;
+	-ms-align-items: -ms-stretch;
+	align-items: stretch;
+	text-align: center;
+	width: 100%;
+	padding: 0;
+}
+
+	.posts > * {
+		-moz-flex-shrink: 1;
+		-webkit-flex-shrink: 1;
+		-ms-flex-shrink: 1;
+		flex-shrink: 1;
+		-moz-flex-grow: 0;
+		-webkit-flex-grow: 0;
+		-ms-flex-grow: 0;
+		flex-grow: 0;
+	}
+
+	.posts > * {
+		width: 50%;
+	}
+
+	.posts > * {
+		padding: 4rem;
+		width: 50%;
+	}
+
+	.posts > article {
+		border-color: #eeeeee;
+		border-left-width: 2px;
+		border-style: solid;
+		border-top-width: 2px;
+		text-align: center;
+		
+	}
+
+		.posts > article > :last-child {
+			margin-bottom: 0;
+		}
+
+		.posts > article:nth-child(2n - 1) {
+			border-left-width: 0;
+		}
+
+		.posts > article:nth-child(-n + 2) {
+			border-top-width: 0;
+		}
+
+	@media screen and (max-width: 980px) {
+
+		.posts > * {
+			width: 50%;
+		}
+
+		.posts > * {
+			padding: 2.5rem;
+			width: 50%;
+		}
+
+	}
+
+	@media screen and (max-width: 736px) {
+
+		.posts > * {
+			width: 100%;
+		}
+
+		.posts > * {
+			padding: 2rem;
+			width: 100%;
+		}
+
+		.posts > article:nth-child(2n - 1) {
+			border-left-width: 2px;
+		}
+
+		.posts > article:nth-child(-n + 2) {
+			border-top-width: 2px;
+		}
+
+		.posts > article:nth-child(n) {
+			border-left-width: 0;
+		}
+
+		.posts > article:nth-child(-n + 1) {
+			border-top-width: 0;
+		}
+
+		.posts > article .image {
+			max-width: 25rem;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+	}
+
+h6 {
+		font-weight: bold;
+		color: #fff;
+		font-size: 40px;
+	  }
+
+
 /* Spotlight */
 
 	.spotlight {
@@ -2670,14 +2787,20 @@ input, select, textarea {
 		display: -ms-flex;
 		display: flex;
 	}
+		header > .date {
+			display: block;
+			font-size: 0.8rem;
+			height: 1;
+			margin: 0 0 1rem 0;
+			position: relative;
+		}
+
+
 
 		.spotlight .image {
-			-moz-order: 1;
-			-webkit-order: 1;
-			-ms-order: 1;
-			order: 1;
-			border-radius: 0;
-			width: 40%;
+			max-width: 25rem;
+			margin-left: auto;
+			margin-right: auto;
 		}
 
 			.spotlight .image img {
